# brave-core

./: package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/res/drawable/: ic_homepage.xml
android/java/res/layout/: bottom_toolbar_tab_switcher.xml
android/java/res/values/: arrays.xml
android/java/res/xml/: brave_main_preferences.xml  brave_privacy_preferences.xml  brave_search_engines_preferences.xml  brave_trackers_ads.xml
app/: brave_generated_resources.grd  settings_strings.grdp
browser/: BUILD.gn  brave_browser_main_parts.cc  brave_browser_process.h  brave_content_browser_client.cc  brave_profile_prefs.cc  sources.gni
browser/android/preferences/: brave_pref_service_bridge.cc
browser/brave_shields/: ad_block_service_browsertest.cc
browser/brave_wallet/: BUILD.gn  crypto_wallets_infobar_delegate.cc  sources.gni
browser/brave_webtorrent/: BUILD.gn  brave_webtorrent_navigation_throttle.cc  brave_webtorrent_navigation_throttle.h
browser/extensions/: BUILD.gn  brave_webtorrent_navigation_throttle_unittest.cc
browser/extensions/api/: brave_wallet_api.cc  brave_wallet_api_browsertest.cc  crypto_wallets_infobar_delegate.cc  crypto_wallets_infobar_delegate.h  ipfs_api.cc  ipfs_api.h
browser/ipfs/: sources.gni
browser/ipfs/import/: ipfs_import_controller.cc
browser/ipfs/test/: BUILD.gn  ipfs_service_browsertest.cc
browser/net/: brave_ad_block_tp_network_delegate_helper.cc  brave_ad_block_tp_network_delegate_helper_unittest.cc  url_context.h
browser/resources/settings/brave_ipfs_page/: BUILD.gn  add_p2p_key_dialog.js  brave_ipfs_browser_proxy.js  brave_ipfs_page.html  brave_ipfs_page.js  p2p_keys_subpage.html  p2p_keys_subpage.js
browser/search_engines/: private_window_search_engine_provider_service.cc  search_engine_provider_service.cc  search_engine_provider_service.h  search_engine_provider_service_browsertest.cc  tor_window_search_engine_provider_service.cc
browser/tor/: BUILD.gn  sources.gni
browser/ui/: BUILD.gn
browser/ui/android/strings/: android_brave_strings.grd
browser/ui/brave_actions/: brave_action_view_controller.cc  brave_action_view_controller.h
browser/ui/views/toolbar/: wallet_button.h
browser/ui/webui/: brave_webui_source.cc
chromium_src/chrome/browser/: about_flags.cc
chromium_src/chrome/browser/ui/: BUILD.gn  browser_tabrestore.cc
chromium_src/components/search_engines/: default_search_manager.cc
common/: BUILD.gn
common/extensions/api/: _ipfs_api_features.json  ipfs.json
components/brave_ads/browser/: ads_service_impl.cc
components/brave_ads/test/: BUILD.gn
components/brave_rewards/browser/: rewards_protocol_handler.cc  rewards_service.cc  rewards_service_impl.cc
components/brave_shields/browser/: BUILD.gn  DEPS  ad_block_custom_filters_service.cc  ad_block_regional_service_manager.cc  brave_shields_web_contents_observer.cc  brave_shields_web_contents_observer.h
components/brave_wallet/browser/: pref_names.cc  pref_names.h
components/brave_wallet_ui/: BUILD.gn
components/brave_wallet_ui/page/: BUILD.gn  wallet_page.tsx
components/brave_wallet_ui/panel/: BUILD.gn  wallet_panel.tsx
components/brave_wallet_ui/panel/async/: wallet_panel_async_handler.ts
components/content_settings/renderer/: brave_content_settings_agent_impl.cc  brave_content_settings_agent_impl.h
components/crypto_dot_com/browser/: crypto_dot_com_service.cc
components/definitions/: rewards.d.ts
components/ipfs/import/: ipfs_import_worker_base.cc
components/resources/: BUILD.gn
components/tor/: BUILD.gn
patches/: base-BUILD.gn.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-autofill-settings-AndroidPaymentAppsFragment.java.patch  chrome-android-java-src-org-chromium-chrome-browser-autofill-settings-AutofillPaymentMethodsFragment.java.patch  chrome-android-java-src-org-chromium-chrome-browser-ntp-NewTabPageLayout.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-ui-webui-settings-settings_localized_strings_provider.cc.patch  chrome-test-BUILD.gn.patch  components-permissions-android-permission_dialog_delegate.cc.patch  components-search_engines-default_search_manager.cc.patch  content-browser-renderer_host-navigation_request.cc.patch  third_party-blink-renderer-core-html-canvas-html_canvas_element.cc.patch
test/: BUILD.gn
(+14 files in other folders)
