import("//brave/components/brave_wallet/common/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

assert(brave_wallet_enabled)

source_set("brave_wallet_impl") {
  visibility = [ "//chrome/browser" ]

  sources = [
    "brave_wallet_delegate_impl.cc",
    "brave_wallet_delegate_impl.h",
  ]

  deps = [
    "//brave/components/brave_wallet/browser",
    "//extensions/buildflags",
  ]

  if (enable_extensions) {
    deps += [
      "//brave/browser/extensions",
      "//chrome/browser/extensions",
      "//content/public/browser",
      "//extensions/browser",
    ]
  }
}
