# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

import("//brave/components/common/typescript.gni")

group("page") {
  deps = [
    ":page_generated_resources"
  ]
}

transpile_web_ui("brave_wallet_ui") {
  entry_points = [ [
        "brave_wallet",
        rebase_path("wallet_page.tsx"),
      ] ]
  resource_name = "brave_wallet"
}

pack_web_resources("page_generated_resources") {
  resource_name = "brave_wallet"
  output_dir = "$root_gen_dir/brave/components/brave_wallet/resources"
  deps = [ ":brave_wallet_ui" ]
}
